[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "backupworkspace"
version = "0.2.0"
authors = [{ name = "xystudio", email = "173288240@qq.com" }]
description = "Quickly back up your workspace."
readme = { file = "README-PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
keywords = [ "backup", "git", "workspace", "snapshot"]
[project.optional-dependencies]
dev = []
[project.scripts]
tomlconfigurer = "backup:main"
[tool.setuptools.package-dir]
backup = "src/backup"
